--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -400,7 +400,19 @@
       list-style: none;
       padding: 0;
     }
+    button.btn.btn-light {
+      background: #888;
+      color: #fff;
+      width: 100%;
+      margin-top: 15px;
+      font-size: 1rem;
+      font-weight: 600;
+      padding: 16px;
+    }
     
+    .paddress p {
+        text-align: left;
+    }
     @media (max-width: 1225px) and (min-width: 959px) { 
       .property_section .container-fluid {
         width: 900px;
