--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -310,10 +310,9 @@
 
     .inner_banner {
         background-size: cover;
-        /* background-position: center center; */
-        background-position: 0 0;
+        background-position: center center;
         background-repeat: no-repeat;
-        height: 500px;
+        height: 420px;
     }
     /* .inner_banner {
         background-size: cover;
